[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OneVLA"
authors = []
description = "OneVLA: A Vision-Language-Action Model for Embodied AI"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vision-language-actions models", "robotic manipulation", "navigation", "embodied AI"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "cache",
    "results",
    "checkpoints",
    "*.egg-info",
    "**.log",
    "**__pycache__**",
    "*.pyc",
]

[tool.black]
line-length = 121
target-version = ["py310"]

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
